--- a/src/PetApplication/Views/PetAnimals/Delete.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Delete.cshtml
@@ -8,7 +8,7 @@
 
     </div>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Are you sure you want to delete this post?</h3>
     <div>
         <dl class="dl-horizontal" style="margin-left:30% auto;">            
             <dd>
