--- a/src/PetApplication/Views/PetReports/Create.cshtml
+++ b/src/PetApplication/Views/PetReports/Create.cshtml
@@ -4,46 +4,48 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@*<h2>Create</h2>*@
 
+<div class="container container-table">
+    <div id="bannerImage" style="margin-left:20%;">
+        <img src="~/Images/banner.jpg" />
+    </div>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>PetReport</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-        <div class="form-group">
-            @Html.LabelFor(model => model.Id, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        @*<div class="form-horizontal">*@
+        <div class="row">
+            <h4>Report</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            
+            <div class="col-12 mb-3">
+                @*@Html.LabelFor(model => model.Id, "Name", htmlAttributes: new { @class = "form-control" })*@
                 @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Report, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-12 mb-3">
+                @*@Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "form-control" })*@
+                @Html.EditorFor(model => model.Report, new { htmlAttributes = new { @class = "form-control",placeholder = "Report" } })
                 @Html.ValidationMessageFor(model => model.Report, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+           
+            
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <div class="btn-group btn-group-sm" role="group">
+                        <input type="submit" value="Report" class="btn btn-outline-danger" />&nbsp;&nbsp;
+                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-}
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
