--- a/src/PetApplication/Views/PetTypes/Delete.cshtml
+++ b/src/PetApplication/Views/PetTypes/Delete.cshtml
@@ -7,7 +7,7 @@
     <div style="margin-top:220px;">
 
     </div>
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Are you sure you want to delete this pet type?</h3>
     <div>
         <h4>PetType</h4>
         <hr />
