--- a/src/PetApplication/Content/css/core-style.css
+++ b/src/PetApplication/Content/css/core-style.css
@@ -397,7 +397,7 @@ img {
     width: 320px;
     max-width: 320px;
     background-color: #fff;
-    padding: 60px 75px; }
+    padding: 60px 25px; } /*60 75*/
     @media only screen and (min-width: 768px) and (max-width: 991px) {
       .main-content-wrapper .header-area {
         -webkit-box-flex: 0;
@@ -760,14 +760,16 @@ img {
         color: #6b6b6b;
         font-weight: 400;
         margin-bottom: 15px; }
-  .main-content-wrapper .single-product-area {
+.amado-nav{padding:0 50px;}
+.main-content-wrapper .single-product-area {
     position: relative;
     z-index: 1;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 calc(95% - 320px);
     flex: 0 0 calc(95% - 320px);
-    width: calc(95% - 320px);
-    max-width: calc(95% - 320px); }
+    /*width: calc(95% - 320px);
+    max-width: calc(95% - 320px);*/
+}
     @media only screen and (min-width: 992px) and (max-width: 1199px) {
       .main-content-wrapper .single-product-area {
         -webkit-box-flex: 0;
