--- a/src/PetApplication/Views/PetAnimals/Create.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Create.cshtml
@@ -77,10 +77,10 @@
                                     @Html.ValidationMessageFor(model => model.Division, "", new { @class = "text-danger" })
                                 </div>
 
-                                <div class="col-12 mb-3">
+                                @*<div class="col-12 mb-3">
                                     @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control", placeholder = "Created By" } })
                                     @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
-                                </div>                                
+                                </div>*@                                
                                 <div class="col-12 mb-3">
                                     @Html.EditorFor(model => model.Details, new { htmlAttributes = new { @class = "form-control w-100", id = "comment", cols = "30", rows = "10", placeholder = "Details" } })
                                     @Html.ValidationMessageFor(model => model.Details, "", new { @class = "text-danger" })
