--- a/src/PetApplication/Views/Home/About.cshtml
+++ b/src/PetApplication/Views/Home/About.cshtml
@@ -9,30 +9,35 @@
     @*<h3>@ViewBag.Message</h3>*@
 
     <p>
-        In computing clusters, there are dierent performance metrics, which often ap-
-        pear to be con
-        icting while being attempted to be optimized. For having such
-        con
-        icting cases along with experiencing existence of heterogeneous environ-
-        ment, it is often dicult for the cluster administrators to select the right number
-        and right combination of machines. As a remedy to this situation, in this thesis,
-        we develop a technique through which cluster administrators can select the right
-        set of machines to enhance cluster performance. In our solution, we integrate
-        both cooling energy consumption and empirical performance characterization of
-        clusters. To the best of our knowledge, existing studies do not integrate these
-        two simultaneously in solving many-objective optimization problem for clus-
-        ters. We exploit a many-objective optimization approach based on NSGA-III
-        algorithm to solve our cluster problem. Our technique attempts to simultane-
-        ously optimize many objectives such as computation time, computation energy,
-        cooling energy, and utilization. Subsequently, we demonstrate through both
-        real experimentation and simulation that our technique mostly performs bet-
-        ter than optimization approaches existing in the literature. In this study, we
-        integrate cooling energy while evaluating cluster performance. Cooling energy
-        consumption is one of the most signicant parts of total energy consumed by
-        clusters and similar distributed systems. However, little eort has been spent
-        so far to integrate the cooling energy in simulators that are used for simulating
-        the distributed systems. Therefore, we also perform integration of cooling en-
-        ergy consumption in a widely-known simulator of distributed systems namely
-        SimGrid.
+        PetBazar.com is a website, where anyone can buy or sell any types of pets. Pet-
+        Bazar.com sell only pet types products. In our country have many e-commerce web-
+        sites. But don't have any pet buy/sell type e-commerce website in our country. We
+        feel this gape, and decide to create a website, that will be buy/sell only pet animals
+        products. Customer can see all product without registering in our website. But if
+        he/she want to post an Ad on our website, then they have to complete the registration
+        process in our website. Our website will provide those features, like color, location,
+        price, name, type of pets, postdate based search and etc. We have messaging system
+        with seller and buyers. Buyer can contact to seller via email or phone. We have post
+        reporting system in our website. If someone post irreverent product, then anyone
+        can report against that post.</p><p> Then admin will update/or delete the post. Buyer can
+        send direct mail to seller from our site. We solved our problem using e-commerce
+        strategy. E-commerce is the most visible business use of the World Wide Web. The
+        primary goal of an e-commerce site is to sell goods and services online. Although the
+        terms e-commerce and e-business are often used interchangeably, there are dierences.
+        Ecommerce is the buying and selling of goods and services on the Internet or other
+        computer network. Any brick and mortar store can become an e-commerce business
+        by adding a virtual storefront with an online catalog. </p><p>E-business became an extension
+        of e-commerce to encompass all aspects of businesses that function online. E-business
+        involves e-commerce, but e-Commerce does not cover all aspects of e-business. Elec-
+        tronic Commerce is enabling the customer to have an increasing say in what products
+        are made, how products are made and how services are delivered (movement from a
+        slow order fulllment process with little understanding of what is taking place inside
+        the rm, to a faster and retort open process with customers having greater control.
+        Electronic Commerce endeavors to improve the execution of business transaction over
+        various networks. It enables the execution of information-laden transactions between
+        two or more parties using inter connected networks. These networks can be a com-
+        bination of plain old telephone system (POTS), Cable TV, leased lines and wireless.
+        Information based transactions are creating new ways of doing business and even new
+        types of business.
     </p>
 </div>
