--- a/src/PetApplication/Views/PetReports/Create.cshtml
+++ b/src/PetApplication/Views/PetReports/Create.cshtml
@@ -37,7 +37,7 @@
                 <div class="col-md-offset-2 col-md-10">
                     <div class="btn-group btn-group-sm" role="group">
                         <input type="submit" value="Report" class="btn btn-outline-danger" />&nbsp;&nbsp;
-                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
+                        @Html.ActionLink("Back to List", "Index","Home", null, new { @class = "btn btn-dark" })
                     </div>
                 </div>
             </div>
