--- a/src/PetApplication/Views/Shared/_Layout.cshtml
+++ b/src/PetApplication/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                     <li><a href="~/Theme/product-details.html">Product</a></li>
                     <li><a href="~/Theme/cart.html">Cart</a></li>
                     <li><a href="~/Theme/checkout.html">Checkout</a></li>*@
-                    @Html.Partial("_MenuPartial")
+                    @*@Html.Partial("_MenuPartial")*@
                     @Html.Partial("_LoginPartial")
 
                     
