--- a/src/PetApplication/Views/Account/Login.cshtml
+++ b/src/PetApplication/Views/Account/Login.cshtml
@@ -12,9 +12,9 @@
         <div class="col-md-8">
             <section id="loginForm">
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
+                {
                     @Html.AntiForgeryToken()
-                    <h4>Use a local account to log in.</h4>
+                    <h4>Enter your email and password to log in.</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
@@ -39,20 +39,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-dark" />
+                    <div class="btn-group btn-group-sm" role="group">
+                        <div class="btn-group btn-group-sm" role="group">
+                            <input type="submit" value="Log in" class="btn btn-dark" /> &nbsp;
+                            @Html.ActionLink("Register as a new user", "Register", null, new { @class = "btn btn-dark" })&nbsp;
+                            @Html.ActionLink("Forgot your password?", "ForgotPassword", null, new { @class = "btn btn-danger" })<br /><br /><br />
                         </div>
+                        <br /><br /><br /><hr />
                     </div>
-                    <div class="form-group">
-                        <p>
-                            @Html.ActionLink("Register as a new user", "Register", null, new { @class = "btn btn-dark" })
-                        </p>
-                        @*//Enable this once you have account confirmation enabled for password reset functionality*@
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword", null, new { @class = "btn btn-danger" })
-                        </p>
-                    </div>
+                    <br /><br /><br /><br /><br /><br />
 
                 }
             </section>
