--- a/src/PetApplication/Views/Home/Contact.cshtml
+++ b/src/PetApplication/Views/Home/Contact.cshtml
@@ -1,22 +1,23 @@
 ﻿@{
     ViewBag.Title = "Contact";
+    ViewBag.NewMessage = "PetBazar.com";
 }
 <div class="container container-table">
     <div id="bannerImage" style="margin-left:20%;">
         <img src="~/Images/banner.jpg" />
     </div>
     <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+    <h3>@ViewBag.NewMessage</h3>
 
     <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
+        Mirpur<br />
+        Dhaka-1216, Bangladesh<br />
+        <abbr title="Phone">Mobile:</abbr>
+        01558660839
     </address>
 
     <address>
-        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@PetBazar.com</a><br />
+        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@PetBazar.com</a>
     </address>
 </div>
