--- a/src/PetApplication/Views/PetTypes/Create.cshtml
+++ b/src/PetApplication/Views/PetTypes/Create.cshtml
@@ -12,7 +12,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>PetType</h4>
+            @*<h4>Pet Type</h4>*@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
