--- a/src/PetApplication/Views/Shared/_NavMenuPartial.cshtml
+++ b/src/PetApplication/Views/Shared/_NavMenuPartial.cshtml
@@ -6,7 +6,7 @@
         <li class="@(ViewBag.Current == "PetTypes" ? "active" : "")">@Html.ActionLink("Pet Type", "Index", "PetTypes")</li>
     </ul>*@
 
-    
+        
         <li class="nav-item @(ViewBag.Current == "Home" ? "active" : "")">
             @Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })
         </li>
@@ -17,16 +17,22 @@
             @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
         </li>
         <li class="nav-item @(ViewBag.Current == "PetAnimals" ? "active" : "")">
-            @Html.ActionLink("Posts", "Index", "PetAnimals", null, new { @class = "nav-link" })
+            @if (HttpContext.Current.User.Identity.IsAuthenticated)
+            {@Html.ActionLink("Posts", "Index", "PetAnimals", null, new { @class = "nav-link" })}
         </li>
-        @*<li class="nav-item @(ViewBag.Current == "PetPosts" ? "active" : "")">
-            @Html.ActionLink("Pet Post", "Index", "PetPosts", null, new { @class = "nav-link" })
-        </li>
-        <li class="nav-item @(ViewBag.Current == "Pets" ? "active" : "")">
-            @Html.ActionLink("Pet", "Index", "Pets",null, new { @class = "nav-link" })
-        </li>*@
         <li class="nav-item @(ViewBag.Current == "PetTypes" ? "active" : "")">
-            @Html.ActionLink("Pet Type", "Index", "PetTypes", null, new { @class = "nav-link" })
+            @if (HttpContext.Current.User.Identity.IsAuthenticated)
+            {
+                if (HttpContext.Current.User.IsInRole("Admin"))
+                {@Html.ActionLink("Pet Type", "Index", "PetTypes", null, new { @class = "nav-link" })}
+            }
+        </li>
+        <li class="nav-item @(ViewBag.Current == "PetReports" ? "active" : "")">
+            @if (HttpContext.Current.User.Identity.IsAuthenticated)
+            {
+                if (HttpContext.Current.User.IsInRole("Admin"))
+                {@Html.ActionLink("Pet Reports", "Index", "PetReports", null, new { @class = "nav-link" })}
+        }
         </li>
         
         
